clock, lotto counter

--- a/printer/index.html
+++ b/printer/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Printer</title>
     <link rel="stylesheet" href="main.css">
+
   </head>
   <body>
     <h1>Printer</h1>
 
     <fieldset>
       <h2>Input</h2>
-      <input type="text" />
-      <textarea></textarea>
+      <input id="input-1" type="text" />
+      <textarea id="input-2"></textarea>
     </fieldset>
 
     <br />
 
     <fieldset>
       <h2>Output</h2>
-      <input type="text" disabled>
-      <textarea disabled></textarea>
+      <input id="output-1" type="text" disabled>
+      <textarea id="output-2" disabled></textarea>
     </fieldset>
+    <script src="main.js"></script>
   </body>
 </html>
